--- a/resume.tex
+++ b/resume.tex
@@ -54,8 +54,8 @@
             \zh{通过逆向工程的相关手段去理解在memory mode 下傲腾内存以及XPBuffer的访存逻辑。}
 \end{itemize}
 
-\en{\datedsubsection{\textbf{\href{http://mir.cs.illinois.edu/marinov/}{Darko Marinov's Lab}, \href{https://illinois.edu}{University of Illinois at Urbana-Champaign}}}{07/2021 -- Present}}
-\zh{\datedsubsection{\textbf{\href{https://illinois.edu}{伊利诺伊大学厄巴纳-香槟分校}\href{http://mir.cs.illinois.edu/marinov/}{Darko Marinov组}}}{2021/07 -- 现在}}
+\en{\datedsubsection{\textbf{\href{http://mir.cs.illinois.edu/marinov/}{Darko Marinov's Lab}, \href{https://illinois.edu}{University of Illinois at Urbana-Champaign}}}{07/2021 -- 10/2021}}
+\zh{\datedsubsection{\textbf{\href{https://illinois.edu}{伊利诺伊大学厄巴纳-香槟分校}\href{http://mir.cs.illinois.edu/marinov/}{Darko Marinov组}}}{2021/07 -- 2021/10}}
 \en{\role{Research Experience for Undergraduate}{Remote Program}}
 \zh{\role{本科生科研}{暑研项目}}
 \begin{itemize}
