--- a/resume.tex
+++ b/resume.tex
@@ -13,6 +13,7 @@
 \name{\en{Yiwei Yang}\zh{杨易为}}
 \basicInfo{
       \email{yangyw@shanghaitech.edu.cn} \textperiodcentered\
+      \homepage[victoryang00.cn]{https://victoryang00.cn}
       \github[victoryang00]{https://github.com/victoryang00}
 }
 
@@ -123,8 +124,8 @@
       \item \en{\textit{Second Award}, Shanghai CTF invitation competition, 2019.}
             \zh{上海2019年 CTF 邀请赛比赛二等奖}
       \end{itemize}
-      \item \en{opensource: \href{https://github.com/geekpiehpc/collective_profiler}{collective\_profiler}}
-      \zh{开源项目贡献：\href{https://github.com/geekpiehpc/collective_profiler}{collective\_profiler} }
+      \item \en{opensource: \href{https://github.com/geekpiehpc/collective_profiler}{collective\_profiler} \href{https://github.com/victoryang00/redsocks-m1}{redsocks}, PR in Flaky Tests}
+      \zh{开源项目贡献：\href{https://github.com/geekpiehpc/collective_profiler}{collective\_profiler} \href{https://github.com/victoryang00/redsocks-m1}{redsocks}, PR in Flaky Tests}
 \end{itemize}
 
 \end{document}
