--- a/resume.tex
+++ b/resume.tex
@@ -20,10 +20,16 @@
 
 \section{\en{Education}\zh{教育经历}}
 \en{\datedsubsection{\textbf{ShanghaiTech University}, Undergraduate}{09/2018 -- 06/2022}}
-\zh{\datedsubsection{\textbf{上海科技大学}, 在读本科}{2018/09 -- 2022/06}}
+\zh{\datedsubsection{\textbf{上海科技大学}, 本科}{2018/09 -- 2022/06}}
 \begin{itemize}
       \item \en{Major: Computer Science, finished Compiler, Network, Database, OS, Convex, RL, Parallel Computing.}
             \zh{计算机科学，完成编译原理，操作系统，网络，数据库，并行计算，凸优化，强化学习等课程，2021编译原理助教}
+\end{itemize}
+\en{\datedsubsection{\textbf{UC Santa Cruz}, Ph.D. Student}{08/2022 -- 06/2028}}
+\zh{\datedsubsection{\textbf{加州大学圣克鲁兹分校}, 在读Ph.D.}{2018/09 -- 2022/06}}
+\begin{itemize}
+      \item \en{Major: Computer Science, advised by \href{https://arquinn.github.io/}{Andrew Quinn}.}
+            \zh{计算机科学，导师为\href{https://arquinn.github.io/}{Andrew Quinn}}
 \end{itemize}
 
 \section{\en{Work Experience}\zh{工作经历}}
@@ -49,6 +55,7 @@
       \item Zhao, Zhe, Guangke Chen, Jingyi Wang, \textbf{Yiwei Yang}, Fu Song, and Jun Sun. "Attack as Defense: Characterizing Adversarial Examples using Robustness."  .\\
             \small{ \en{A2D uses the cost of attacking an input for robustness evaluation and identifies those less robust examples as adversarial since less robust examples are easier to attack.}
             \zh{A2D使用攻击输入的成本来进行鲁棒性评估，并将那些鲁棒性较差的例子确定为对抗性，因为鲁棒性较差的例子更容易被攻击。}}
+      \item Yuchen Liu, Yixuan Meng, \textbf{Yiwei Yang}, Kaiyuan Xu, Zijun Xu, Tianyuan Wu, Shu Yin. "Critique of “MemXCT: memory-centric X-ray CT reconstruction with massive parallelization” by SCC Team from ShanghaiTech University."  .
       \item \en{Researching MOVE language in Libra currency source code to protect against Arithmetic Overflow, Timestamp Difference.}
             \zh{研究libra源码中的MOVE prover，提高抵御时间戳攻击、整数溢出等的安全性。}
       \item \en{Understanding the real access mechanism of Memory Mode Optane Memory and XPBuffer by reverse-engineering methods.}
@@ -60,8 +67,8 @@
 \en{\role{Research Experience for Undergraduate}{Remote Program}}
 \zh{\role{本科生科研}{暑研项目}}
 \begin{itemize}
-      \item \en{Investigating Order dependent Flacky Tests.}
-            \zh{使用Flacky Test进行数据竞争检查。}
+      \item \en{Investigating Order dependent Flacky Tests by Dynamic Taint Analysis and try to fix the underlying concurrent bugs.}
+            \zh{使用动态污点分析在Flacky数据集上进行数据竞争检查，并尝试修复并发bug。}
 \end{itemize}
 
 
@@ -89,25 +96,17 @@
                   comfortable with Rust/C/C++/Java/Scala/TypeScript (in random order).}
             \zh{\textbf{编程语言}:
                   不局限于特定编程语言，且尤其熟悉 Python/Golang 等，
-                  了解 Rust/C/C++/Java/Scala/TypeScript 等（不分先后）。}
+                  了解 Rust/C/C++/Java/Scala/TypeScript 等。}
 
       \item \en{\textbf{System}:
-                  familiar with operating system concepts and design,
-                  have experience in optimizing performance on kernel level using tools
-                  like \texttt{ebpf} and \texttt{strace}.}
+                  familiar with \texttt{LLVM}, \texttt{Linux perf}, \texttt{eBPF}, \texttt{Soot}, \texttt{Gem5}}
             \zh{\textbf{系统}:
-                  熟悉各种操作系统内核的概念与设计，熟悉各种内核性能调优工具，例如 \texttt{ebpf} 和 \texttt{strace}。}
+                  熟悉各种操作系统内核的概念与设计，熟悉各种内核性能调优工具，例如\texttt{LLVM}, \texttt{Linux perf}, \texttt{eBPF}, \texttt{Soot}, \texttt{Gem5}。}
 
       \item \en{\textbf{Machine Learning}:
                   familiar with general knowledge of machine \& reinforce learning.}
             \zh{\textbf{机器学习}:
                   熟悉经典机器与强化学习算法。}
-
-      \item \en{\textbf{Developing Tools}:
-                  experienced in Linux-based programming,
-                  have experience with team tools like Confluence, Jira, Git, etc, DevOps tools like grafana, jenkins, ansible, etc.}
-            \zh{\textbf{开发工具}:
-                  十分熟悉 Linux，有 Confluence、Jira、Git 等团队合作工具以及grafana、jenkins、ansible等集群自动化等工具的经验。}
 \end{itemize}
 
 \section{\en{Miscellaneous}\zh{其他}}
