--- a/resume.tex
+++ b/resume.tex
@@ -4,33 +4,34 @@
 \newcommand{\zh}[1]{}
 
 \zh{\usepackage{xeCJK}}
-\zh{\setCJKmainfont{SourceHanSansHWSC-Regular}}
-\zh{\setCJKsansfont{SourceHanSansHWSC-Regular}}
-\zh{\setCJKmonofont{SourceHanSansHWSC-Regular}}
+% \zh{\setCJKmainfont{SourceHanSansHWSC-Regular}}
+% \zh{\setCJKsansfont{SourceHanSansHWSC-Regular}}
+% \zh{\setCJKmonofont{SourceHanSansHWSC-Regular}}
 
 \begin{document}
 
 \name{\en{Yiwei Yang}\zh{杨易为}}
 \basicInfo{
-      \email{yangyw@shanghaitech.edu.cn} \textperiodcentered\
-      \homepage[victoryang00.cn]{https://victoryang00.cn}
+      \email{victoryang00@ucsc.edu} \textperiodcentered\
+      \homepage[asplos.dev]{https://asplos.dev}
       \github[victoryang00]{https://github.com/victoryang00}
 }
 
 
 \section{\en{Education}\zh{教育经历}}
-\en{\datedsubsection{\textbf{ShanghaiTech University}, Undergraduate}{09/2018 -- 06/2022}}
-\zh{\datedsubsection{\textbf{上海科技大学}, 本科}{2018/09 -- 2022/06}}
-\begin{itemize}
-      \item \en{Major: Computer Science, finished Compiler, Network, Database, OS, Convex, RL, Parallel Computing.}
-            \zh{计算机科学，完成编译原理，操作系统，网络，数据库，并行计算，凸优化，强化学习等课程，2021编译原理助教}
-\end{itemize}
 \en{\datedsubsection{\textbf{UC Santa Cruz}, Ph.D. Student}{08/2022 -- 06/2028}}
 \zh{\datedsubsection{\textbf{加州大学圣克鲁兹分校}, 在读Ph.D.}{2018/09 -- 2022/06}}
 \begin{itemize}
-      \item \en{Major: Computer Science, advised by \href{https://arquinn.github.io/}{Andrew Quinn}.}
-            \zh{计算机科学，导师为\href{https://arquinn.github.io/}{Andrew Quinn}}
+      \item \en{Major: Computer Science, advised by \href{https://arquinn.github.io/}{Andrew Quinn}. TA of Computer Architecture}
+            \zh{计算机科学，导师为\href{https://arquinn.github.io/}{Andrew Quinn}，2022体系结构助教}
 \end{itemize}
+\en{\datedsubsection{\textbf{ShanghaiTech University}, Undergraduate}{09/2018 -- 06/2022}}
+\zh{\datedsubsection{\textbf{上海科技大学}, 本科}{2018/09 -- 2022/06}}
+\begin{itemize}
+      \item \en{Major: Computer Science, finished Compiler, Network, Database, OS, CA, Convex, RL, Parallel Computing. TA of Compiler}
+            \zh{计算机科学，完成编译原理，操作系统，网络，数据库，并行计算，凸优化，强化学习等课程，2021/2编译原理助教}
+\end{itemize}
+
 
 \section{\en{Work Experience}\zh{工作经历}}
 \en{\datedsubsection{\textbf{\href{https://www.jumptrading.com/}{Jump Trading}}, Shanghai, China}{07/2020 -- 09/2020}}
@@ -45,21 +46,16 @@
       \item \en{Applied gobidng of gobpf to try IOVisor stuff.}
             \zh{应用eBPF的gobinding进行io侦测。}
 \end{itemize}
-
 \section{\en{Research Experience}\zh{研究经历}}
-\en{\datedsubsection{\textbf{\href{http://s3l.shanghaitech.edu.cn/}{System} \href{https://toast-lab.gitee.io/}{Lab}, ShanghaiTech University}}{07/2019 -- 06/2020}}
-\zh{\datedsubsection{\textbf{\href{http://s3l.shanghaitech.edu.cn/}{上海科技大学系统}\href{https://toast-lab.gitee.io/}{实验室}}}{2019/07 -- 2021/06}}
-\en{\role{Undergraduate Research}{Intern}}
-\zh{\role{本科生科研}{实习}}
+
+\en{\datedsubsection{\textbf{\href{https://www.ssrc.ucsc.edu/index.html}{Storage Systems Research Center}, UC Santa Cruz}}{08/2022 -- Present}}
+\zh{\datedsubsection{\textbf{\href{https://www.ssrc.ucsc.edu/index.html}{加州大学圣克鲁兹分校存储中心}}}{08/2022 -- 现在}}
+\en{\role{Graduate Research}{Assistant}}
+\zh{\role{研究生科研}{助理}}
 \begin{itemize}
-      \item Zhao, Zhe, Guangke Chen, Jingyi Wang, \textbf{Yiwei Yang}, Fu Song, and Jun Sun. "Attack as Defense: Characterizing Adversarial Examples using Robustness."  .\\
-            \small{ \en{A2D uses the cost of attacking an input for robustness evaluation and identifies those less robust examples as adversarial since less robust examples are easier to attack.}
-            \zh{A2D使用攻击输入的成本来进行鲁棒性评估，并将那些鲁棒性较差的例子确定为对抗性，因为鲁棒性较差的例子更容易被攻击。}}
-      \item Yuchen Liu, Yixuan Meng, \textbf{Yiwei Yang}, Kaiyuan Xu, Zijun Xu, Tianyuan Wu, Shu Yin. "Critique of “MemXCT: memory-centric X-ray CT reconstruction with massive parallelization” by SCC Team from ShanghaiTech University."  .
-      \item \en{Researching MOVE language in Libra currency source code to protect against Arithmetic Overflow, Timestamp Difference.}
-            \zh{研究libra源码中的MOVE prover，提高抵御时间戳攻击、整数溢出等的安全性。}
-      \item \en{Understanding the real access mechanism of Memory Mode Optane Memory and XPBuffer by reverse-engineering methods.}
-            \zh{通过逆向工程的相关手段去理解在memory mode 下傲腾内存以及XPBuffer的访存逻辑。}
+      \item \small{ \en{Understanding the performance characteristics of CXL.mem systems. Data-driven far memory allocation, prefetching, and replacement policies. Emulating memory disaggregation for data center applications}
+      \zh{理解CXL.mem的性能分析。数据驱动的远端内存分配、预取和替换策略。模拟数据中心应用的内存。}}
+      
 \end{itemize}
 
 \en{\datedsubsection{\textbf{\href{http://mir.cs.illinois.edu/marinov/}{Darko Marinov's Lab}, \href{https://illinois.edu}{University of Illinois at Urbana-Champaign}}}{07/2021 -- 10/2021}}
@@ -67,41 +63,54 @@
 \en{\role{Research Experience for Undergraduate}{Remote Program}}
 \zh{\role{本科生科研}{暑研项目}}
 \begin{itemize}
-      \item \en{Investigating Order dependent Flacky Tests by Dynamic Taint Analysis and try to fix the underlying concurrent bugs.}
-            \zh{使用动态污点分析在Flacky数据集上进行数据竞争检查，并尝试修复并发bug。}
+      \item \en{Investigating \href{https://victoryang00.cn/wordpress/2022/08/09/final-report-of-program-analysis/}{Order dependent Flaky Tests} by Dynamic Taint Analysis and fix the underlying concurrent bugs.}
+            \zh{使用动态污点分析在Flaky数据集上进行\href{https://victoryang00.cn/wordpress/2022/08/09/final-report-of-program-analysis/}{数据依赖变量检测}，并修复java写的并行系统中的并发bug。}
+\end{itemize}
+
+\en{\datedsubsection{\textbf{\href{http://s3l.shanghaitech.edu.cn/}{System} \href{https://toast-lab.gitee.io/}{Lab}, ShanghaiTech University}}{07/2019 -- 06/2020}}
+\zh{\datedsubsection{\textbf{\href{http://s3l.shanghaitech.edu.cn/}{上海科技大学系统}\href{https://toast-lab.gitee.io/}{实验室}}}{2019/07 -- 2021/06}}
+\en{\role{Undergraduate Research}{Intern}}
+\zh{\role{本科生科研}{实习}}
+\begin{itemize}
+      \item \small{ \en{A2D uses the cost of attacking an input for robustness evaluation and identifies those less robust examples as adversarial since less robust examples are easier to attack.}
+      \zh{A2D使用攻击输入的成本来进行鲁棒性评估，并将那些鲁棒性较差的例子确定为对抗性，因为鲁棒性较差的例子更容易被攻击。}}\\
+      Zhao, Zhe, Guangke Chen, Jingyi Wang, \textbf{Yiwei Yang}, Fu Song, and Jun Sun. \textbf{"Attack as Defense: Characterizing Adversarial Examples using Robustness."}  .
+            
+      \item \small{\en{Establish a team of 16 undergraduate students in total for SCC Competition. Optimize Fortran/C++/Cuda memory/FS MPI/NCCL/Hovorod communication on 2-8 nodes' server and train new members who are interested in system for job-related skills.}\zh{建立一支由16名本科生组成的队伍参加SCC竞赛。在2-8个节点的服务器上优化Fortran/C++/Cuda内存/FS MPI/NCCL/Hovorod通信，并培训对系统感兴趣的新成员，以获得与工作有关的技能。}} \begin{itemize}
+            \item Yuchen Liu, Yixuan Meng, \textbf{Yiwei Yang}, Kaiyuan Xu, Zijun Xu, Tianyuan Wu, Shu Yin. \textbf{"Critique of “MemXCT: memory-centric X-ray CT reconstruction with massive parallelization” by SCC Team from ShanghaiTech University."}  .
+            \item Guancheng Li, Songhui Cao, Chuyi Zhao, Siyuan Zhang, Haotian Jing, Yuchen Ji, Zecheng Li, Jiajun Cheng, \textbf{Yiwei Yang}, Shu Yin \textbf{“Critique of "A Parallel Framework for Constraint-Based Bayesian Network Learning via Markov Blanket Discovery" by SCC Team from ShanghaiTech University”}  .
+            \end{itemize}
+      \item \en{Researching \href{https://github.com/LEAFERx/movable}{MOVE language} in Diem currency source code to protect against Arithmetic Overflow, Timestamp Difference.}
+            \zh{研究Diem源码中的\href{https://github.com/LEAFERx/movable}{MOVE language}，提高抵御时间戳攻击、整数溢出等的安全性。}
+      \item \en{Understanding the \href{https://github.com/victoryang00/pmemable}{real access mechanism} of Memory Mode Optane Memory and XPBuffer by reverse-engineering methods.}
+            \zh{通过逆向工程的相关手段去理解在memory mode 下傲腾内存以及XPBuffer的\href{https://github.com/victoryang00/pmemable}{内存置换算法逻辑}。}
 \end{itemize}
 
 
-
 \section{\en{Portfolios}\zh{团队项目}}
-\datedsubsection{\textbf{Pint OS (Rust)}}{\small{\url{https://github.com/victoryang00/PintOS}}}
-\en{A Stanford based Tiny x86 single thread multi process Operating System and WIP rust ABI}
-\zh{一个玩具x86单核多线程操作系统，同时在写rust ABI层。}
-\small{ \en{Implemented Thread, User Program (Argument Passing) Virtual Memory and File System.}\zh{实现了线程，Syscall和虚拟内存以及文件系统。}}
-
-\datedsubsection{\textbf{Cuckoo Hashing}}{\small{\url{https://github.com/victoryang00/CuckooHashing}}}
-\en{A Novel Hash method using GPU}
-\zh{一个在GPU上新颖的hash方法}
-\small{ \en{Implement full two table cuckoo Hash table using CUDA intrinsic.}\zh{实现了双表杜鹃鸟表，这在数据降维等方面很有用处。}}
-
-\datedsubsection{\textbf{ChocoPy Compiler}}{\small{\url{http://s3l.shanghaitech.edu.cn:8081/yangyw/chocopy}}}
-\en{A compiler to LLVM IR and to riscv assembly of python 3.6 subset as ShanghaiTech Compiler class project}
+\datedsubsection{\href{https://github.com/chocopy-llvm/chocopy-llvm}{\textbf{ChocoPy Compiler}}}{\tiny{\en{A compiler to LLVM IR and to riscv assembly of python 3.6 subset as ShanghaiTech Compiler class project}
 \zh{一个从 python3.6 子集编译至 LLVM IR 和 riscv 汇编的编译器，作为编译原理课的 project}
+}}
+
+\datedsubsection{\href{https://github.com/LemonHX/ioring-rs}{\textbf{IORing Rust}}}{\tiny{\en{IORing Rust for windows, future support \href{https://github.com/bytedance/monoio}{monoio}}\zh{windows上的IORing Rust版，未来支持\href{https://github.com/bytedance/monoio}{monoio}}}}
+
+\datedsubsection{\href{https://github.com/victoryang00/CuckooHashing}{\textbf{Cuckoo Hashing GPU}}}{\tiny{\en{A Novel Hash method using GPU}
+\zh{一个在GPU上新颖的hash方法}}\en{Implement full two table cuckoo Hash table using CUDA intrinsic.}\zh{实现了双表杜鹃鸟表，这在数据降维等方面很有用处。}}
 
 \section{\en{Skills}\zh{技能}}
 \begin{itemize}[parsep=0.25ex]
       \item \en{\textbf{Programming Languages}:
                   not limited to any specific language,
-                  and experienced in Python/Golang,
+                  and experienced in Python/C++/Rust,
                   comfortable with Rust/C/C++/Java/Scala/TypeScript (in random order).}
             \zh{\textbf{编程语言}:
-                  不局限于特定编程语言，且尤其熟悉 Python/Golang 等，
+                  不局限于特定编程语言，且尤其熟悉 Python/C++/Rust 等，
                   了解 Rust/C/C++/Java/Scala/TypeScript 等。}
 
       \item \en{\textbf{System}:
                   familiar with \texttt{LLVM}, \texttt{Linux perf}, \texttt{eBPF}, \texttt{Soot}, \texttt{Gem5}}
             \zh{\textbf{系统}:
-                  熟悉各种操作系统内核的概念与设计，熟悉各种内核性能调优工具，例如\texttt{LLVM}, \texttt{Linux perf}, \texttt{eBPF}, \texttt{Soot}, \texttt{Gem5}。}
+                  熟悉各种编译器及操作系统内核的概念与设计，熟悉各种内核性能调优工具，例如\texttt{LLVM}, \texttt{Linux perf}, \texttt{eBPF}, \texttt{Soot}, \texttt{Gem5}。}
 
       \item \en{\textbf{Machine Learning}:
                   familiar with general knowledge of machine \& reinforce learning.}
@@ -111,20 +120,18 @@
 
 \section{\en{Miscellaneous}\zh{其他}}
 \begin{itemize}
-      \item \en{Interests: Computer Architecture and System, Software Engineering.}
-            \zh{兴趣：高性能计算、存储、形式化验证安全等。}
+      \item \en{Interests: Computer Architecture, Storage System, Formal Methods, etc.}
+            \zh{兴趣：高性能计算、体系结构、存储、形式化验证安全等。}
       \item \en{Awards:}
       \zh{所获奖项：}
       \begin{itemize}
-      \item \en{Lead \href{https://hpc.geekpie.club}{GeekPie\_HPC} \textit{Ranked 2}, SC-SCC21. \textit{Ranked 8}, ISC21.}
-            \zh{带领\href{https://hpc.geekpie.club}{GeekPie\_HPC} SCC20 团队第9名，SCC21 团队第2名，ISC21 团队第8名}
+      \item \en{Lead \href{https://hpc.geekpie.club}{GeekPie\_HPC} \textit{Ranked 2}, SC-SCC21. \textit{Ranked 4}, ISC22.}
+            \zh{带领\href{https://hpc.geekpie.club}{GeekPie\_HPC} SCC21 团队第2名，ISC22 团队第4名}
       \item \en{As a member of \href{https://github.com/0x238e/Vchain}{0x238e} \textit{Best award}, Bitrun, Hang Zhou, 2019.}
             \zh{带领\href{https://github.com/0x238e/Vchain}{0x238e} Bitrun Hackathon 比赛最佳奖}
       \item \en{\textit{Second Award}, Shanghai CTF invitation competition, 2019.}
             \zh{上海2019年 CTF 邀请赛比赛二等奖}
       \end{itemize}
-      \item \en{opensource: \href{https://github.com/geekpiehpc/collective_profiler}{collective\_profiler} \href{https://github.com/victoryang00/redsocks-m1}{redsocks}, PR in Flaky Tests}
-      \zh{开源项目贡献：\href{https://github.com/geekpiehpc/collective_profiler}{collective\_profiler} \href{https://github.com/victoryang00/redsocks-m1}{redsocks}, PR in Flaky Tests}
 \end{itemize}
 
 \end{document}
