--- a/resume.tex
+++ b/resume.tex
@@ -74,11 +74,11 @@
 \begin{itemize}
       \item \small{ \en{A2D uses the cost of attacking an input for robustness evaluation and identifies those less robust examples as adversarial since less robust examples are easier to attack.}
       \zh{A2D使用攻击输入的成本来进行鲁棒性评估，并将那些鲁棒性较差的例子确定为对抗性，因为鲁棒性较差的例子更容易被攻击。}}\\
-      Zhao, Zhe, Guangke Chen, Jingyi Wang, \textbf{Yiwei Yang}, Fu Song, and Jun Sun. \textbf{"Attack as Defense: Characterizing Adversarial Examples using Robustness."}  .
+      Zhao, Zhe, Guangke Chen, Jingyi Wang, \textbf{Yiwei Yang}, Fu Song, and Jun Sun. \textbf{"Attack as Defense: Characterizing Adversarial Examples using Robustness."} ISSTA21  .
             
       \item \small{\en{Establish a team of 16 undergraduate students in total for SCC Competition. Optimize Fortran/C++/Cuda memory/FS MPI/NCCL/Hovorod communication on 2-8 nodes' server and train new members who are interested in system for job-related skills.}\zh{建立一支由16名本科生组成的队伍参加SCC竞赛。在2-8个节点的服务器上优化Fortran/C++/Cuda内存/FS MPI/NCCL/Hovorod通信，并培训对系统感兴趣的新成员，以获得与工作有关的技能。}} \begin{itemize}
-            \item Yuchen Liu, Yixuan Meng, \textbf{Yiwei Yang}, Kaiyuan Xu, Zijun Xu, Tianyuan Wu, Shu Yin. \textbf{"Critique of “MemXCT: memory-centric X-ray CT reconstruction with massive parallelization” by SCC Team from ShanghaiTech University."}  .
-            \item Guancheng Li, Songhui Cao, Chuyi Zhao, Siyuan Zhang, Haotian Jing, Yuchen Ji, Zecheng Li, Jiajun Cheng, \textbf{Yiwei Yang}, Shu Yin \textbf{“Critique of "A Parallel Framework for Constraint-Based Bayesian Network Learning via Markov Blanket Discovery" by SCC Team from ShanghaiTech University”}  .
+            \item Yuchen Liu$^{*}$, Yixuan Meng$^{*}$, \textbf{Yiwei Yang}$^{*}$, Kaiyuan Xu$^{*}$, Zijun Xu$^{*}$, Tianyuan Wu$^{*}$, Shu Yin. \textbf{"Critique of “MemXCT: memory-centric X-ray CT reconstruction with massive parallelization” by SCC Team from ShanghaiTech University."} TPDS21 .
+            \item Guancheng Li$^{*}$, Songhui Cao$^{*}$, Chuyi Zhao$^{*}$, Siyuan Zhang$^{*}$, Haotian Jing$^{*}$, Yuchen Ji$^{*}$, Zecheng Li$^{*}$, Jiajun Cheng$^{*}$, \textbf{Yiwei Yang}$^{*}$, Shu Yin \textbf{“Critique of "A Parallel Framework for Constraint-Based Bayesian Network Learning via Markov Blanket Discovery" by SCC Team from ShanghaiTech University”} TPDS22 .
             \end{itemize}
       \item \en{Researching \href{https://github.com/LEAFERx/movable}{MOVE language} in Diem currency source code to protect against Arithmetic Overflow, Timestamp Difference.}
             \zh{研究Diem源码中的\href{https://github.com/LEAFERx/movable}{MOVE language}，提高抵御时间戳攻击、整数溢出等的安全性。}
@@ -108,9 +108,9 @@
                   了解 Golang/C/Java/Scala/TypeScript 等。}
 
       \item \en{\textbf{System}:
-                  familiar with \texttt{LLVM}, \texttt{Linux perf}, \texttt{eBPF}, \texttt{Soot}, \texttt{Gem5}}
+                  Specialist in Compiler \& Performance Analysis, familiar with \texttt{LLVM}, \texttt{Linux perf}, \texttt{eBPF}}
             \zh{\textbf{系统}:
-                  熟悉各种编译器及操作系统内核的概念与设计，熟悉各种内核性能调优工具，例如\texttt{LLVM}, \texttt{Linux perf}, \texttt{eBPF}, \texttt{Soot}, \texttt{Gem5}。}
+                  熟悉各种编译器及操作系统内核的概念与设计，熟悉各种内核性能调优工具，例如\texttt{LLVM}, \texttt{Linux perf}, \texttt{eBPF}。}
 
       \item \en{\textbf{Machine Learning}:
                   familiar with general knowledge of machine \& reinforce learning.}
