--- a/resume.tex
+++ b/resume.tex
@@ -53,9 +53,15 @@
 \en{\role{Graduate Research}{Assistant}}
 \zh{\role{研究生科研}{助理}}
 \begin{itemize}
-      \item \small{ \en{Understanding the performance characteristics of CXL.mem systems. Data-driven far memory allocation, prefetching, and replacement policies. Emulating memory disaggregation for data center applications}
-      \zh{理解CXL.mem的性能分析。数据驱动的远端内存分配、预取和替换策略。模拟数据中心应用的内存。}}
-      
+      \item \small{ \en{Understand the performance characteristics of CXL.mem systems. Data-driven far memory allocation, prefetching, and replacement policies. } \zh{理解CXL.mem的性能分析。数据驱动的远端内存分配、预取和替换策略。}}
+      \item{\small \en{Simulate CXL.mem for data center applications, Emulate CXL.cache for reliable driver and kernel fuzzing.}
+      \zh{模拟CXL.mem数据中心应用，为kernel可靠性模拟CXL.cache设备。}}
+      \\
+      \textbf{Yiwei Yang} Pooneh Safayenikoo, Jiacheng Ma, Tanvir Ahmad Khan, Andrew Quinn. \textbf{"CXLMemSim: A pure software simulated CXL.mem for performance characterization."} Yarch23  .
+      \item \small{ \en{Make Hardware Software Co-design for on CXL.cache data movement}
+      \zh{设计一种硬件软件协同的CXL.cache数据迁移方法。}}
+      \item \small{ \en{Make Virtual Machine migration based on WebAssembly and WASI}
+      \zh{设计一种基于WebAssembly和WASI的虚拟机迁移方法。}}
 \end{itemize}
 
 \en{\datedsubsection{\textbf{\href{http://mir.cs.illinois.edu/marinov/}{Darko Marinov's Lab}, \href{https://illinois.edu}{University of Illinois at Urbana-Champaign}}}{07/2021 -- 10/2021}}
@@ -73,13 +79,8 @@
 \zh{\role{本科生科研}{实习}}
 \begin{itemize}
       \item \small{ \en{A2D uses the cost of attacking an input for robustness evaluation and identifies those less robust examples as adversarial since less robust examples are easier to attack.}
-      \zh{A2D使用攻击输入的成本来进行鲁棒性评估，并将那些鲁棒性较差的例子确定为对抗性，因为鲁棒性较差的例子更容易被攻击。}}\\
+      \zh{A2D使用攻击输入的成本来进行鲁棒性评估，并将那些鲁棒性较差的label diff rate这一指标guide生成对抗样本。}}\\
       Zhao, Zhe, Guangke Chen, Jingyi Wang, \textbf{Yiwei Yang}, Fu Song, and Jun Sun. \textbf{"Attack as Defense: Characterizing Adversarial Examples using Robustness."} ISSTA21  .
-            
-      \item \small{\en{Establish a team of 16 undergraduate students in total for SCC Competition. Optimize Fortran/C++/Cuda memory/FS MPI/NCCL/Hovorod communication on 2-8 nodes' server and train new members who are interested in system for job-related skills.}\zh{建立一支由16名本科生组成的队伍参加SCC竞赛。在2-8个节点的服务器上优化Fortran/C++/Cuda内存/FS MPI/NCCL/Hovorod通信，并培训对系统感兴趣的新成员，以获得与工作有关的技能。}} \begin{itemize}
-            \item Yuchen Liu$^{*}$, Yixuan Meng$^{*}$, \textbf{Yiwei Yang}$^{*}$, Kaiyuan Xu$^{*}$, Zijun Xu$^{*}$, Tianyuan Wu$^{*}$, Shu Yin. \textbf{"Critique of “MemXCT: memory-centric X-ray CT reconstruction with massive parallelization” by SCC Team from ShanghaiTech University."} TPDS21 .
-            \item Guancheng Li$^{*}$, Songhui Cao$^{*}$, Chuyi Zhao$^{*}$, Siyuan Zhang$^{*}$, Haotian Jing$^{*}$, Yuchen Ji$^{*}$, Zecheng Li$^{*}$, Jiajun Cheng$^{*}$, \textbf{Yiwei Yang}$^{*}$, Shu Yin \textbf{“Critique of "A Parallel Framework for Constraint-Based Bayesian Network Learning via Markov Blanket Discovery" by SCC Team from ShanghaiTech University”} TPDS22 .
-            \end{itemize}
       \item \en{Researching \href{https://github.com/LEAFERx/movable}{MOVE language} in Diem currency source code to protect against Arithmetic Overflow, Timestamp Difference.}
             \zh{研究Diem源码中的\href{https://github.com/LEAFERx/movable}{MOVE language}，提高抵御时间戳攻击、整数溢出等的安全性。}
       \item \en{Understanding the \href{https://github.com/victoryang00/pmemable}{real access mechanism} of Memory Mode Optane Memory and XPBuffer by reverse-engineering methods.}
@@ -87,15 +88,12 @@
 \end{itemize}
 
 
-\section{\en{Portfolios}\zh{团队项目}}
-\datedsubsection{\href{https://github.com/chocopy-llvm/chocopy-llvm}{\textbf{ChocoPy Compiler}}}{\tiny{\en{A compiler to LLVM IR and to riscv assembly of python 3.6 subset as ShanghaiTech Compiler class project}
-\zh{一个从 python3.6 子集编译至 LLVM IR 和 riscv 汇编的编译器，作为编译原理课的 project}
-}}
+% \section{\en{Portfolios}\zh{团队项目}}
+% \datedsubsection{\href{https://github.com/chocopy-llvm/chocopy-llvm}{\textbf{ChocoPy Compiler}}}{\tiny{\en{A compiler to LLVM IR and to riscv assembly of python 3.6 subset as ShanghaiTech Compiler class project}
+% \zh{一个从 python3.6 子集编译至 LLVM IR 和 riscv 汇编的编译器，作为编译原理课的 project}
+% }}
 
-\datedsubsection{\href{https://github.com/LemonHX/ioring-rs}{\textbf{IORing Rust}}}{\tiny{\en{IORing Rust for windows, future support \href{https://github.com/bytedance/monoio}{monoio}}\zh{windows上的IORing Rust版，未来支持\href{https://github.com/bytedance/monoio}{monoio}}}}
-
-\datedsubsection{\href{https://github.com/victoryang00/CuckooHashing}{\textbf{Cuckoo Hashing GPU}}}{\tiny{\en{A Novel Hash method using GPU}
-\zh{一个在GPU上新颖的hash方法}}\en{Implement full two table cuckoo Hash table using CUDA intrinsic.}\zh{实现了双表杜鹃鸟表，这在数据降维等方面很有用处。}}
+% \datedsubsection{\href{https://github.com/LemonHX/ioring-rs}{\textbf{IORing Rust}}}{\tiny{\en{IORing Rust for windows, future support \href{https://github.com/bytedance/monoio}{monoio}}\zh{windows上的IORing Rust版，未来支持\href{https://github.com/bytedance/monoio}{monoio}}}}
 
 \section{\en{Skills}\zh{技能}}
 \begin{itemize}[parsep=0.25ex]
@@ -125,8 +123,8 @@
       \item \en{Awards:}
       \zh{所获奖项：}
       \begin{itemize}
-      \item \en{Lead \href{https://hpc.geekpie.club}{GeekPie\_HPC} \textit{Ranked 2}, SC-SCC21. \textit{Ranked 4}, ISC22.}
-            \zh{带领\href{https://hpc.geekpie.club}{GeekPie\_HPC} SCC21 团队第2名，ISC22 团队第4名}
+      \item \en{Lead \href{https://hpc.geekpie.club}{GeekPie\_HPC} \textit{Ranked 2}, SC-SCC21. \textit{Ranked 4}, ISC22. Advise Not-Slow-Slug \textit{Ranked 2}, ISC23.}
+            \zh{带领\href{https://hpc.geekpie.club}{GeekPie\_HPC} SCC21 团队第2名，ISC22 团队第4名，指导 Not-Slow-Slug 团队 ISC23 团队第2名。}
       \item \en{As a member of \href{https://github.com/0x238e/Vchain}{0x238e} \textit{Best award}, Bitrun, Hang Zhou, 2019.}
             \zh{带领\href{https://github.com/0x238e/Vchain}{0x238e} Bitrun Hackathon 比赛最佳奖}
       \item \en{\textit{Second Award}, Shanghai CTF invitation competition, 2019.}
