--- a/resume.tex
+++ b/resume.tex
@@ -113,14 +113,14 @@
                   了解 Golang/C/Java/Scala/TypeScript 等。}
 
       \item \en{\textbf{System}:
-                  Specialist in Compiler \& Performance Analysis, familiar with \texttt{LLVM}, \texttt{MLIR}, \texttt{Linux}, \texttt{eBPF}}
+                  Specialist in Compiler \& Performance Analysis, familiar with \texttt{LLVM}, \texttt{MLIR}, \texttt{Gem5}, \texttt{WASM}, \texttt{gdb}, \texttt{eBPF}, \texttt{qemu}, \texttt{chisel}, \texttt{Linux mm \& observability subsystem}.}
             \zh{\textbf{系统}:
-                  熟悉各种编译器及操作系统内核的概念与设计，熟悉各种内核性能调优工具，例如\texttt{LLVM}, \texttt{MLIR}, \texttt{Linux}, \texttt{eBPF}。}
+                  熟悉各种CPU，编译器及操作系统内核的概念与设计，熟悉各种内核性能调优工具，例如\texttt{LLVM}, \texttt{MLIR}, \texttt{Gem5}, \texttt{WASM}, \texttt{gdb}, \texttt{eBPF}, \texttt{qemu}, \texttt{chisel}, \texttt{Linux mm \& observability 子系统}。}
 
       \item \en{\textbf{Machine Learning}:
-                  familiar with general knowledge of machine \& reinforce learning.}
+                  familiar with general knowledge of machine \& reinforce learning, interested of RL for Sys.}
             \zh{\textbf{机器学习}:
-                  熟悉经典机器与强化学习算法。}
+                  熟悉经典机器与强化学习算法，对RL for System有兴趣。}
 \end{itemize}
 
 \section{\en{Miscellaneous}\zh{其他}}
