--- a/resume.tex
+++ b/resume.tex
@@ -65,11 +65,9 @@
 \section{\en{Publications}\zh{论文}}
 \href{https://arxiv.org/pdf/2410.15894}{\textbf{"Transparent and Efficient Live Migration across Heterogeneous Hosts with Wharf"} Preprint} \textbf{Yiwei Yang}, Aibo Hu, Yusheng Zheng, Brian Zhao, Xinqi Zhang, Andrew Quinn
 
-\href{https://arxiv.org/pdf/2408.04856}{\textbf{"wasm-bpf: Streamlining eBPF Deployment in Cloud Environments with WebAssembly"} Preprint} Yusheng Zheng, Tong Yu, \textbf{Yiwei Yang}, Andrew Quinn.
-
 \href{https://arxiv.org/pdf/2312.05531}{\textbf{"KEN: Kernel Extensions using Natural Language"} eBPF24} Yusheng Zheng, \textbf{Yiwei Yang}, Maolin Chen, Andrew Quinn.
 
-\href{https://arxiv.org/pdf/2311.07923}{\textbf{"bpftime: userspace eBPF Runtime for Uprobe, Syscall and Kernel-User Interactions"} Preprint} Yusheng Zheng, Tong Yu, \textbf{Yiwei Yang}, Yanpeng Hu, Xiaozheng Lai, Andrew Quinn.
+\href{https://arxiv.org/pdf/2311.07923}{\textbf{"bpftime: userspace eBPF Runtime for Uprobe, Syscall and Kernel-User Interactions"} LPC23} Yusheng Zheng, Tong Yu, \textbf{Yiwei Yang}, Yanpeng Hu, Xiaozheng Lai, Andrew Quinn.
 
 \href{https://arxiv.org/pdf/2303.06153}{\textbf{"CXLMemSim: A pure software simulated CXL.mem for performance characterization."} Yarch23} \textbf{Yiwei Yang} Pooneh Safayenikoo, Jiacheng Ma, Tanvir Ahmad Khan, Andrew Quinn.
 
@@ -131,9 +129,10 @@
 
 \section{\en{Miscellaneous}\zh{其他}}
 \begin{itemize}
-      \item \en{Interests: Computer Architecture, Storage System, Formal Methods, etc.}
-            \zh{兴趣：高性能计算、体系结构、存储、形式化验证安全等。}
+      \item \en{Interests: HPC, Architecture, Security, JIT, CXL, LLM4Sys4LLM, etc.}
+            \zh{兴趣：高性能计算、体系结构、安全、JIT、CXL、LLM4Sys4LLM等。}
       \item \en{Lead \href{https://hpc.geekpie.club}{GeekPie\_HPC} \textit{Ranked 2}, SC-SCC21. \textit{Ranked 4}, ISC22. Advise Not-Slow-Slug \textit{Ranked 2}, ISC23.} \zh{带领\href{https://hpc.geekpie.club}{GeekPie\_HPC} SCC21 团队第2名，ISC22 团队第4名，指导 Not-Slow-Slug 团队 ISC23 团队第2名。}
+      \item \en{Advise Kiki Zhang, Zhen Cao to be Ph.D. students.}\zh{指导 Kiki Zhang, Zhen Cao 成为博士生。}
       % \item \en{As a member of \href{https://github.com/0x238e/Vchain}{0x238e} \textit{Best award}, Bitrun, Hang Zhou, 2019.}
       %       \zh{带领\href{https://github.com/0x238e/Vchain}{0x238e} Bitrun Hackathon 比赛最佳奖}
       \item \en{Google Summer of Code Mentor for BPFTime}
