--- a/resume.tex
+++ b/resume.tex
@@ -4,7 +4,7 @@
 \newcommand{\zh}[1]{}
 
 \zh{\usepackage{xeCJK}}
-% \zh{\setCJKmainfont{SourceHanSansCN-Regular}}
+\zh{\setCJKmainfont{SourceHanSansCN-Regular}}
 % \zh{\setCJKsansfont{SourceHanSansHWSC-Regular}}
 % \zh{\setCJKmonofont{SourceHanSansHWSC-Regular}}
 
@@ -63,11 +63,11 @@
 \end{itemize}
 
 \section{\en{Publications}\zh{论文}}
+\href{https://arxiv.org/pdf/2311.07923}{\textbf{"Extending Applications Safely and Efficiently"} OSDI25} Yusheng Zheng, Tong Yu, \textbf{Yiwei Yang}, Yanpeng Hu, Xiaozheng Lai, Dan Williams, Andrew Quinn.
+
 \href{https://arxiv.org/pdf/2410.15894}{\textbf{"Transparent and Efficient Live Migration across Heterogeneous Hosts with Wharf"} Preprint} \textbf{Yiwei Yang}, Aibo Hu, Yusheng Zheng, Brian Zhao, Xinqi Zhang, Andrew Quinn
 
 \href{https://arxiv.org/pdf/2312.05531}{\textbf{"KEN: Kernel Extensions using Natural Language"} eBPF24} Yusheng Zheng, \textbf{Yiwei Yang}, Maolin Chen, Andrew Quinn.
-
-\href{https://arxiv.org/pdf/2311.07923}{\textbf{"bpftime: userspace eBPF Runtime for Uprobe, Syscall and Kernel-User Interactions"} LPC23} Yusheng Zheng, Tong Yu, \textbf{Yiwei Yang}, Yanpeng Hu, Xiaozheng Lai, Andrew Quinn.
 
 \href{https://arxiv.org/pdf/2303.06153}{\textbf{"CXLMemSim: A pure software simulated CXL.mem for performance characterization."} Yarch23} \textbf{Yiwei Yang} Pooneh Safayenikoo, Jiacheng Ma, Tanvir Ahmad Khan, Andrew Quinn.
 
